--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "npm": ">=6.x"
   },
   "scripts": {
-    "lint:src": "eslint . --ext .js,.mjs",
+    "lint:src": "eslint .",
     "lint": "npm run lint:src"
   },
   "devDependencies": {
