--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   },
   "scripts": {
     "lint:src": "eslint .",
-    "lint": "npm run lint:src"
+    "lint": "npm run lint:src",
+    "test": "jest",
+    "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
     "eslint-config-contactlab": "^5.0.0",
     "eslint-config-prettier": "^6.11.0",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "jest-cli": "^26.0.1",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1"
   }
