--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
 .cache
-.DS_Store
 .env*
-.versions/
-*.lock
-*.log
-*.sw[mnpcod]
-*.tmp*
-*~
-$RECYCLE.BIN/
-log.txt
-node_modules/
+.DS_Store
+*lock
+*log
+node_modules
 Thumbs.db
-UserInterfaceState.xcuserstate
