--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "url": "https://github.com/giotramu/javascript-algorithms/issues"
   },
   "engines": {
-    "node": ">=12.x",
+    "node": ">=14.x",
     "npm": ">=6.x"
   },
   "scripts": {
-    "lint:src": "eslint .",
+    "lint:src": "eslint . --ignore-path .gitignore",
     "lint": "npm run lint:src",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
-    "eslint": "^7.12.1",
+    "eslint": "^7.13.0",
     "eslint-config-contactlab": "^5.0.0",
     "eslint-config-prettier": "^6.15.0",
     "husky": "^4.3.0",
-    "jest": "^26.6.1",
-    "jest-cli": "^26.6.1",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0"
   }
