--- a/package.json
+++ b/package.json
@@ -20,14 +20,25 @@
     "test": "jest",
     "test:watch": "npm run test -- --watch"
   },
+  "prettier": "@giotramu/prettier-config",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*": "prettier --write --ignore-unknown",
+    "*.js": "eslint --fix"
+  },
   "devDependencies": {
-    "eslint": "^7.13.0",
+    "@giotramu/prettier-config": "^1.1.0",
+    "eslint": "^7.14.0",
     "eslint-config-contactlab": "^5.0.0",
     "eslint-config-prettier": "^6.15.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
-    "prettier": "^2.1.2",
-    "pretty-quick": "^3.1.0"
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.2.0"
   }
 }
