--- a/package.json
+++ b/package.json
@@ -21,24 +21,14 @@
     "test:watch": "npm run test -- --watch"
   },
   "prettier": "@giotramu/prettier-config",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*": "prettier --write --ignore-unknown",
-    "*.js": "eslint --fix"
-  },
   "devDependencies": {
+    "@arkweid/lefthook": "^0.7.5",
     "@giotramu/prettier-config": "^1.1.2",
-    "eslint": "^7.25.0",
-    "eslint-config-contactlab": "^6.1.0",
+    "eslint": "^7.27.0",
+    "eslint-config-contactlab": "^6.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "jest": "^27.0.1",
+    "jest-cli": "^27.0.1",
+    "prettier": "^2.3.0"
   }
 }
